--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body{
 .three,
 .four,
 .five{
-    padding-left: 220px;
-    padding-right: 220px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 .one{
     display: grid;
@@ -30,7 +30,7 @@ body{
     align-items: flex-start;
 }
 .one-one h3{
-    margin: 0 550px 0 0;
+    margin: 0 51% 0 0;
     font-size: 25px;
     font-family: monospace;
     cursor: pointer;
@@ -38,7 +38,7 @@ body{
 .one-one a{
     align-items: center;
     margin-top: 2px;
-    margin-left: 70px;
+    margin-left: 6%;
     color: rgb(177, 177, 177);
     font-family: monospace;
     text-decoration: none;
@@ -65,12 +65,13 @@ body{
 .one-two{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-column-gap: 8%;
     align-items: center;
     padding-top: 0px;
-    padding-bottom: 130px;
+    padding-bottom: 13%;
 }
 .column-1{
-    padding: 0 100px 0 0;
+    padding: 0 0 0 0;
 }
 .column-1 h1{
     font-weight:900;
@@ -99,12 +100,11 @@ body{
     border: solid 1px white;
 }
 .column-2 img{
-    height: 300px;
-    width: 580px;
+    width: 100%;
     object-fit: cover;
 }
 .two{
-    padding: 0 335px 0 335px;
+    padding: 0 15% 0 15%;
     margin-bottom: 80px;
 }
 .two h1{
@@ -115,10 +115,10 @@ body{
 .box-container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-content: center;
+    justify-items: center;
 }
 .box{
-    width: 200px;
+    width: 76%;
     cursor: pointer;
     transition: transform 0.25s;
 }
@@ -141,7 +141,7 @@ body{
     text-decoration: none;
 }
 .three{
-    padding: 120px 360px 90px 360px;
+    padding: 8% 24% 6% 24%;
     background-color: rgb(230, 230, 230);
 }
 .three p{
@@ -157,19 +157,19 @@ body{
 }
 .four{
     background-color: white;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 6%;
+    padding-bottom: 6%;
 }
 .four-box{
     display: flex;
-    padding: 55px 130px;
+    padding: 4% 9%;
     background-color: #0a0f4d;
     color: white;
     border-radius: 15px;
     display: flex;
 }
 .four-box h2{
-    margin: 0 0 3px 0;
+    margin: 0 0 2% 0;
 }
 .four-box p{
     margin: 0;
@@ -199,14 +199,14 @@ body{
     margin-left: 100px;
 }
 .five{
-    padding-top: 15px;
-    padding-bottom: 11px;
+    padding-top: 1%;
+    padding-bottom: 0.7%;
     background-color:rgb(0, 0, 26);
     color: rgb(207, 207, 207);
     text-align: center;
 }
 .five a{
-    margin-right: 25px;
+    margin-right: 2.5%;
     color: gray;
     font-size: 23px;
     transition: opacity 0.15s;
